[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "joblib>=1.5.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "python-whois>=0.9.5",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "tldextract>=5.3.0",
    "werkzeug>=3.1.3",
    "whois>=1.20240129.2",
]
